// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryPointModal component Function selectPoint snapshot test Should execute and render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#091540",
      "borderRadius": 4,
      "shadowColor": "rgba(0,0,0,0.04)",
      "shadowOffset": Object {
        "height": 16,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 24,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "width": 305,
        },
        null,
      ]
    }
  >
    <View
      style={
        Object {
          "marginBottom": 21,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#04142F",
              "fontFamily": "Roboto-Medium",
              "fontSize": 18,
              "lineHeight": 26,
            },
            Object {
              "color": "#ffffff",
            },
          ]
        }
      >
        Story Point Estimation
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#04142F",
              "fontFamily": "Roboto-Regular",
              "fontSize": 14,
              "letterSpacing": 0.32,
              "lineHeight": 22,
            },
            Object {
              "color": "#8A94A6",
            },
          ]
        }
      >
        Select an estimation for your task
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-around",
        }
      }
    >
      <View>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessible={true}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "height": 48,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "flexGrow": 1,
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#8A94A6",
                        "fontFamily": "alldone",
                        "fontSize": 24,
                        "opacity": 1,
                      }
                    }
                  >
                    
                  </Text>
                </View>
                <Text
                  style={
                    Array [
                      Object {
                        "fontFamily": "Roboto-Medium",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      Object {
                        "color": "#ffffff",
                        "marginLeft": 9,
                      },
                    ]
                  }
                >
                  10 minutes
                </Text>
              </View>
              <View
                style={
                  Object {
                    "justifyContent": "flex-end",
                  }
                }
              />
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
      <View>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessible={true}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "height": 48,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "flexGrow": 1,
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#8A94A6",
                        "fontFamily": "alldone",
                        "fontSize": 24,
                        "opacity": 1,
                      }
                    }
                  >
                    
                  </Text>
                </View>
                <Text
                  style={
                    Array [
                      Object {
                        "fontFamily": "Roboto-Medium",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      Object {
                        "color": "#ffffff",
                        "marginLeft": 9,
                      },
                    ]
                  }
                >
                  30 minutes
                </Text>
              </View>
              <View
                style={
                  Object {
                    "justifyContent": "flex-end",
                  }
                }
              />
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
      <View>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessible={true}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "height": 48,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "flexGrow": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#0D55CF",
                      "borderColor": "#0C66FF",
                      "borderRadius": 1000,
                      "borderWidth": 2,
                      "height": 22,
                      "justifyContent": "center",
                      "margin": 0.6,
                      "width": 22,
                    }
                  }
                >
                  <View>
                    <Text
                      style={
                        Object {
                          "color": "#ffffff",
                          "fontFamily": "alldone",
                          "fontSize": 24,
                          "opacity": 1,
                        }
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
                <Text
                  style={
                    Array [
                      Object {
                        "fontFamily": "Roboto-Medium",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      Object {
                        "color": "#ffffff",
                        "marginLeft": 9,
                      },
                    ]
                  }
                >
                  1-2 hours
                </Text>
              </View>
              <View
                style={
                  Object {
                    "justifyContent": "flex-end",
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#ffffff",
                        "fontFamily": "alldone",
                        "fontSize": 24,
                        "opacity": 1,
                      }
                    }
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
      <View>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessible={true}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "height": 48,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "flexGrow": 1,
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#8A94A6",
                        "fontFamily": "alldone",
                        "fontSize": 24,
                        "opacity": 1,
                      }
                    }
                  >
                    
                  </Text>
                </View>
                <Text
                  style={
                    Array [
                      Object {
                        "fontFamily": "Roboto-Medium",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      Object {
                        "color": "#ffffff",
                        "marginLeft": 9,
                      },
                    ]
                  }
                >
                  Half day
                </Text>
              </View>
              <View
                style={
                  Object {
                    "justifyContent": "flex-end",
                  }
                }
              />
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
      <View>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessible={true}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "height": 48,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "flexGrow": 1,
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#8A94A6",
                        "fontFamily": "alldone",
                        "fontSize": 24,
                        "opacity": 1,
                      }
                    }
                  >
                    
                  </Text>
                </View>
                <Text
                  style={
                    Array [
                      Object {
                        "fontFamily": "Roboto-Medium",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      Object {
                        "color": "#ffffff",
                        "marginLeft": 9,
                      },
                    ]
                  }
                >
                  1 day
                </Text>
              </View>
              <View
                style={
                  Object {
                    "justifyContent": "flex-end",
                  }
                }
              />
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
      <View>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessible={true}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "height": 48,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "flexGrow": 1,
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#8A94A6",
                        "fontFamily": "alldone",
                        "fontSize": 24,
                        "opacity": 1,
                      }
                    }
                  >
                    
                  </Text>
                </View>
                <Text
                  style={
                    Array [
                      Object {
                        "fontFamily": "Roboto-Medium",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      Object {
                        "color": "#ffffff",
                        "marginLeft": 9,
                      },
                    ]
                  }
                >
                  1.5 days
                </Text>
              </View>
              <View
                style={
                  Object {
                    "justifyContent": "flex-end",
                  }
                }
              />
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
      <View>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessible={true}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "height": 48,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "flexGrow": 1,
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#8A94A6",
                        "fontFamily": "alldone",
                        "fontSize": 24,
                        "opacity": 1,
                      }
                    }
                  >
                    
                  </Text>
                </View>
                <Text
                  style={
                    Array [
                      Object {
                        "fontFamily": "Roboto-Medium",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      Object {
                        "color": "#ffffff",
                        "marginLeft": 9,
                      },
                    ]
                  }
                >
                  2 days
                </Text>
              </View>
              <View
                style={
                  Object {
                    "justifyContent": "flex-end",
                  }
                }
              />
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
      <View>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessible={true}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "height": 48,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "flexGrow": 1,
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#8A94A6",
                        "fontFamily": "alldone",
                        "fontSize": 24,
                        "opacity": 1,
                      }
                    }
                  >
                    
                  </Text>
                </View>
                <Text
                  style={
                    Array [
                      Object {
                        "fontFamily": "Roboto-Medium",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      Object {
                        "color": "#ffffff",
                        "marginLeft": 9,
                      },
                    ]
                  }
                >
                  3 days
                </Text>
              </View>
              <View
                style={
                  Object {
                    "justifyContent": "flex-end",
                  }
                }
              />
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "position": "absolute",
        "right": 13,
        "top": 13,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#8A94A6",
              "fontFamily": "alldone",
              "fontSize": 24,
              "opacity": 1,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`StoryPointModal component StoryPointModal snapshot test Should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#091540",
      "borderRadius": 4,
      "elevation": 3,
      "shadowColor": "rgba(78, 93, 120, 0.56)",
      "shadowOffset": Object {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 16,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "width": 305,
        },
        null,
      ]
    }
  >
    <View
      style={
        Object {
          "marginBottom": 21,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#04142F",
              "fontFamily": "Roboto-Medium",
              "fontSize": 18,
              "lineHeight": 26,
            },
            Object {
              "color": "#ffffff",
            },
          ]
        }
      >
        Estimation
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#04142F",
              "fontFamily": "Roboto-Regular",
              "fontSize": 14,
              "letterSpacing": 0.32,
              "lineHeight": 22,
            },
            Object {
              "color": "#8A94A6",
            },
          ]
        }
      >
        Select an estimation for your task
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-around",
        }
      }
    >
      <View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 48,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "flexGrow": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#0D55CF",
                    "borderColor": "#0C66FF",
                    "borderRadius": 1000,
                    "borderWidth": 2,
                    "height": 22,
                    "justifyContent": "center",
                    "margin": 0.6,
                    "width": 22,
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#ffffff",
                        "fontFamily": "alldone",
                        "fontSize": 24,
                        "opacity": 1,
                      }
                    }
                  >
                    
                  </Text>
                </View>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#ffffff",
                      "marginLeft": 9,
                    },
                  ]
                }
              >
                10 minutes
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "flex-end",
                }
              }
            >
              <View>
                <Text
                  style={
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "alldone",
                      "fontSize": 24,
                      "opacity": 1,
                    }
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 48,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "flexGrow": 1,
                }
              }
            >
              <View>
                <Text
                  style={
                    Object {
                      "color": "#8A94A6",
                      "fontFamily": "alldone",
                      "fontSize": 24,
                      "opacity": 1,
                    }
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#ffffff",
                      "marginLeft": 9,
                    },
                  ]
                }
              >
                30 minutes
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "flex-end",
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 48,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "flexGrow": 1,
                }
              }
            >
              <View>
                <Text
                  style={
                    Object {
                      "color": "#8A94A6",
                      "fontFamily": "alldone",
                      "fontSize": 24,
                      "opacity": 1,
                    }
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#ffffff",
                      "marginLeft": 9,
                    },
                  ]
                }
              >
                1-2 hours
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "flex-end",
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 48,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "flexGrow": 1,
                }
              }
            >
              <View>
                <Text
                  style={
                    Object {
                      "color": "#8A94A6",
                      "fontFamily": "alldone",
                      "fontSize": 24,
                      "opacity": 1,
                    }
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#ffffff",
                      "marginLeft": 9,
                    },
                  ]
                }
              >
                Half day
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "flex-end",
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 48,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "flexGrow": 1,
                }
              }
            >
              <View>
                <Text
                  style={
                    Object {
                      "color": "#8A94A6",
                      "fontFamily": "alldone",
                      "fontSize": 24,
                      "opacity": 1,
                    }
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#ffffff",
                      "marginLeft": 9,
                    },
                  ]
                }
              >
                1 day
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "flex-end",
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 48,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "flexGrow": 1,
                }
              }
            >
              <View>
                <Text
                  style={
                    Object {
                      "color": "#8A94A6",
                      "fontFamily": "alldone",
                      "fontSize": 24,
                      "opacity": 1,
                    }
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#ffffff",
                      "marginLeft": 9,
                    },
                  ]
                }
              >
                1.5 days
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "flex-end",
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 48,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "flexGrow": 1,
                }
              }
            >
              <View>
                <Text
                  style={
                    Object {
                      "color": "#8A94A6",
                      "fontFamily": "alldone",
                      "fontSize": 24,
                      "opacity": 1,
                    }
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#ffffff",
                      "marginLeft": 9,
                    },
                  ]
                }
              >
                2 days
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "flex-end",
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 48,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "flexGrow": 1,
                }
              }
            >
              <View>
                <Text
                  style={
                    Object {
                      "color": "#8A94A6",
                      "fontFamily": "alldone",
                      "fontSize": 24,
                      "opacity": 1,
                    }
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#ffffff",
                      "marginLeft": 9,
                    },
                  ]
                }
              >
                3 days
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "flex-end",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "position": "absolute",
        "right": 13,
        "top": 13,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#8A94A6",
              "fontFamily": "alldone",
              "fontSize": 24,
              "opacity": 1,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;
